Graphs added to softskills, early styles applied to text

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1>academic background:</h1>
         <article class="education-accolades">
             <h2>university of alberta</h2>
-            <h3>faculty of extension | red academy</h3>
+            <h3>faculty of extension | RED academy</h3>
             <ul>
                 <li>Graduated with certificate in front-end web development, 2020</li>
                 <li>COVID-19 crisis moved program work to remote facilitation 2/3 of the way to course completion</li>
@@ -89,13 +89,13 @@
         <div class="hardskills">
             <h2>hardskills</h2>
             <ul>
-                <li>html5</li>
+                <li>HTML5</li>
                 <li><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i></li>
-                <li>css</li>
+                <li>CSS</li>
                 <li><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i></li>
-                <li>javascript</li>
+                <li>JavaScript</li>
                 <li><i class="fab fa-js-square fa-2x"></i><i class="fab fa-js-square fa-2x"></i><i class="fab fa-js-square fa-2x"></i></li>
-                <li>react</li>
+                <li>REACT</li>
                 <li><i class="fab fa-react fa-2x"></i><i class="fab fa-react fa-2x"></i><i class="fab fa-react fa-2x"></i><i class="fab fa-react fa-2x"></i></li>
                 <li>git</li>
                 <li><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i></li>
@@ -115,26 +115,28 @@
         <h1>references:</h1>
         <div>
             <ul>
-                <li>Thomas Goodall-tgoodall@diepie.ca</li>
+                <li>Thomas Goodall<br/>tgoodall@diepie.ca</li>
                 <li>CEO, Die Pie Inc.</li>
             </ul>
         </div>
         <div>
             <ul>
-                <li>Ian Mitchell-iddmitch@ecol.ca</li>
-                <li>Accounts Manager, ECOL Electrical Solutions</li>
+                <li>Ian Mitchell<br/>iddmitch@ecol.ca</li>
+                <li>Accounts Manager, ECOL</li>
             </ul>
         </div>
     </section>
     <section class="contact-info">
         <h1>contact/socials:</h1>
-        <ul>
-            <li><i class="fas fa-phone-alt"></i>: <a href="tel:+1-7780-710-5395">(780)710-5395</a></li>
-            <li><i class="far fa-envelope"></i>: <a href="mailto:jhofer@ualberta.ca">jhofer@ualberta.ca</a></li>
-            <li><i class="fas fa-globe"></i>: <a target="_blank" href="https://jordanhofer92.github.io">www.jordanhofer92.github.io</a></li>
-            <li><a target="_blank" href="https://github.com/JordanHofer92"><i class="fab fa-github fa-2x"></i></a></li>
-            <li><a target="_blank" href="https://www.linkedin.com/in/jordanhofer92"><i class="fab fa-linkedin fa-2x"></i></a></li>
-        </ul>
+        <div class="contact">
+            <i class="fas fa-phone-alt"></i>: <a href="tel:+1-7780-710-5395">(780)710-5395</a><br/>
+            <i class="far fa-envelope"></i>: <a href="mailto:jhofer@ualberta.ca">jhofer@ualberta.ca</a><br/>
+            <i class="fas fa-globe"></i>: <a target="_blank" href="https://jordanhofer92.github.io">www.jordanhofer92.github.io</a>
+        </div>
+        <div class="socials">
+            <a target="_blank" href="https://github.com/JordanHofer92"><i class="fab fa-github fa-2x"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/jordanhofer92"><i class="fab fa-linkedin fa-2x"></i></a>
+        </div>
     </section>
 </body>
 </html>
