Adjusted mobile layout, began tech-skill graphs, re-factoring begun

--- a/index.html
+++ b/index.html
@@ -87,25 +87,20 @@
     <section class="hardskills">
         <h1>tech-skills</h1>
         <ul>
-            <li>HTML5</li>
-            <li><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i><i class="fab fa-html5 fa-2x"></i></li>
-            <li>CSS</li>
-            <li><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i><i class="fab fa-css3-alt fa-2x"></i></li>
-            <li>JavaScript</li>
-            <li><i class="fab fa-js-square fa-2x"></i><i class="fab fa-js-square fa-2x"></i><i class="fab fa-js-square fa-2x"></i></li>
-            <li>REACT</li>
-            <li><i class="fab fa-react fa-2x"></i><i class="fab fa-react fa-2x"></i><i class="fab fa-react fa-2x"></i><i class="fab fa-react fa-2x"></i></li>
-            <li>git</li>
-            <li><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i><i class="fab fa-github-square fa-2x"></i></li>
+            <li>HTML5<br/><i class="fab fa-html5"></i></li>
+            <li>CSS<br/><i class="fab fa-css3-alt"></i></li>
+            <li>JavaScript<br/><i class="fab fa-js-square"></i></li>
+            <li>REACT<br/><i class="fab fa-react"></i></li>
+            <li>git<br/><i class="fab fa-github-square"></i></li>
         </ul>
     </section>
     <section class="softskills">
         <h1>transferrable skills</h1>
         <ul>
-            <li><canvas id="remote-work-graph" width="100" height="100"></canvas><br/>Remote Work</li>
-            <li><canvas id="project-management-graph" width="100" height="100"></canvas><br/>Project Management</li>
-            <li><canvas id="leadership-graph" width="100" height="100"></canvas><br/>Leadership</li>
-            <li><canvas id="accountability-graph" width="100" height="100"></canvas><br/>Accountability</li>
+            <li>Remote Work <br/><canvas id="remote-work-graph" width="100" height="100"></canvas></li>
+            <li>Project Management<br/><canvas id="project-management-graph" width="100" height="100"></canvas></li>
+            <li>Leadership<br/><canvas id="leadership-graph" width="100" height="100"></canvas></li>
+            <li>Accountability<br/><canvas id="accountability-graph" width="100" height="100"></canvas></li>
         </ul>
     </section>
     </section>
