Added animations to tech-skills section. Re-worked contact section. Added and adjusted copy.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <script src="https://kit.fontawesome.com/ca3f327da4.js" crossorigin="anonymous" SameSite='Secure' defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
-    <script type="module" src="./main.js" defer></script>
+    <script type="module" src="./scripts/main.js" defer></script>
     <title>Jordan | Resumé</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
     <section class="summary">
         <div>
             <h1>profile summary</h1>
-            <p>I aim to provide engaging, optimized websites through collaboration and communication with my clients. I look to deliver the best possible product to attain the personal or professional goals of the client by creating well-written, optimized code that encourages maintainability yet leaves room for innovation. I focus on prompt project completion times in order to get my clients message and product to the public in an effective and timely manner.</p>
+            <p>I aim to provide engaging, optimized websites through collaboration and communication with my clients. I deliver the best possible product to attain the personal and professional goals of the client by creating well-written, optimized code that encourages maintainability yet leaves room for innovation. I focus on prompt project completion times in order to get my clients message and product to the public in an effective and timely manner.<br/> I am goal and detail-oriented. I decompose tasks into small, manageable objectives in order to give each part of the problems I solve the attention they deserve.</p>
         </div>
     </section>
     <section class="work-experience">
@@ -73,7 +73,7 @@
         </article>
     </section>
     <section class="education">
-        <h1>academic background</h1>
+        <h1>academics</h1>
         <article class="education-accolades">
             <h2>university of alberta</h2>
             <h3>faculty of extension | RED academy</h3>
@@ -86,13 +86,13 @@
     </section>
     <section class="hardskills">
         <h1>tech-skills</h1>
-        <ul>
-            <li>HTML5<br/><i class="fab fa-html5"></i></li>
-            <li>CSS<br/><i class="fab fa-css3-alt"></i></li>
-            <li>JavaScript<br/><i class="fab fa-js-square"></i></li>
-            <li>REACT<br/><i class="fab fa-react"></i></li>
-            <li>git<br/><i class="fab fa-github-square"></i></li>
-        </ul>
+        <div class="hardskills-spans">
+            <span>HTML5<i class="fab fa-html5"></i></span>
+            <span>CSS<i class="fab fa-css3-alt"></i></span>
+            <span>JavaScript<i class="fab fa-js-square"></i></span>
+            <span>REACT<i class="fab fa-react"></i></span>
+            <span>git<i class="fab fa-github-square"></i></span>
+        </div>
     </section>
     <section class="softskills">
         <h1>transferrable skills</h1>
