--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
     <section class="hardskills">
         <h1>tech-skills</h1>
         <div class="hardskills-spans">
-            <span>HTML5<i class="fab fa-html5"></i></span>
-            <span>CSS<i class="fab fa-css3-alt"></i></span>
-            <span>JavaScript<i class="fab fa-js-square"></i></span>
-            <span>REACT<i class="fab fa-react"></i></span>
-            <span>git<i class="fab fa-github-square"></i></span>
+            <span class="markup">HTML5<i class="fab fa-html5"></i></span>
+            <span class="styles">CSS<i class="fab fa-css3-alt"></i></span>
+            <span class="js">JavaScript<i class="fab fa-js-square"></i></span>
+            <span class="react">REACT<i class="fab fa-react"></i></span>
+            <span class="hub">git<i class="fab fa-github-square"></i></span>
         </div>
     </section>
     <section class="softskills">
@@ -118,16 +118,16 @@
         <div class="contact">
             <a href="tel:+1-7780-710-5395"><i class="fas fa-phone-alt"></i>(780)710-5395</a><br/>
             <a href="mailto:jhofer@ualberta.ca"><i class="far fa-envelope"></i>jhofer@ualberta.ca</a><br/>
-            <a target="_blank" href="https://jordanhofer92.github.io"><i class="fas fa-globe"></i>www.jordanhofer92.github.io</a>
+            <a target="_blank" href="https://jordanhofer92.github.io"><i class="fas fa-globe"></i>jordanhofer92.github.io</a>
         </div>
         <div class="socials">
             <a target="_blank" href="https://github.com/JordanHofer92">
                 <i class="fab fa-github"></i>
-                <p>www.github.com/JordanHofer92</p>
+                <p>github.com/JordanHofer92</p>
             </a>
             <a target="_blank" href="https://www.linkedin.com/in/jordanhofer92">
                 <i class="fab fa-linkedin"></i>
-                <p>www.linkedin.com/in/jordanhofer92</p>
+                <p>linkedin.com/in/jordanhofer92</p>
             </a>
         </div>
     </section>
